--- a/app/views/word_mappings/index.html.slim
+++ b/app/views/word_mappings/index.html.slim
@@ -15,4 +15,4 @@ table.table.table-striped
 
 br
 
-= link_to '新規', new_word_mapping_path, class: 'btn btn-primary', data: { event_name: 'Open new word mapping' }
+= link_to '新規', new_bot_word_mapping_path(@bot), class: 'btn btn-primary', data: { event_name: 'Open new word mapping' }
