--- a/app/views/layouts/shared/ui/_header.html.erb
+++ b/app/views/layouts/shared/ui/_header.html.erb
@@ -20,13 +20,19 @@
         </ul>
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">staffメニュー<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <% if current_user.staff? %>
+                  <li><%= link_to "システム共通同義語一覧", admin_word_mappings_path, data: { event_name: 'Open admin word mapping index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
+                  <li><%= link_to "精度テスト", admin_accuracy_test_cases_path, data: { event_name: 'Open admin accuracy test case index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
+                <% end %>
+              </ul>
+            </li>
             <li><%= link_to "ヘルプ", " https://mofmof.zendesk.com", target: "blank" %></li>
             <li><%= link_to "サポート", new_contacts_path %></li>
             <% if policy(:bot).index? %>
               <li><%= link_to "Bot一覧", bots_path, data: { event_name: 'Open bot index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
-            <% end %>
-            <% if current_user.staff? %>
-              <li><%= link_to "システム共通同義語一覧", admin_word_mappings_path, data: { event_name: 'Open admin word mapping index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
             <% end %>
             <% if policy(current_user).edit? %>
               <li><%= link_to 'ユーザー情報変更', edit_user_registration_path, data: { event_name: 'Open edit user', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
