--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -11,7 +11,7 @@
   .page-header__controls
     = link_to '新規登録', new_bot_question_answer_path(@bot), class: 'btn btn-default', data: { event_name: 'Open new question answer', bot_id: @bot.id, bot_name: @bot.name }
 
-= render 'search_form', bot: @bot, search_result: @search_result, keyword: @keyword, sort: params.dig(:q, :s)
+= render 'search_form', bot: @bot, search_result: @search_result, keyword: @keyword, sort: params.dig(:q, :s), action_url: bot_question_answers_path(@bot)
 
 = pagination
 
