--- a/app/views/question_answers/_summary_card.html.slim
+++ b/app/views/question_answers/_summary_card.html.slim
@@ -34,12 +34,13 @@
         = space 10
         small.text-muted 更新日時：#{l question_answer.updated_at, format: :short}
       .col-sm-4.text-right
-        = link_to edit_bot_question_answer_path(bot, question_answer), class: 'btn btn-default btn-xs', data: { event_name: 'Open edit question answer', bot_id: bot.id, bot_name: bot.name } do
-          = material_icon 'edit'
-          = space
-          span 編集
-        = space 3
-        = link_to bot_question_answer_path(bot, question_answer), class: 'btn btn-danger btn-xs', data: { confirm: '本当に削除してよろしいですか？', method: :delete, event_name: 'Delete question answer', bot_id: bot.id, bot_name: bot.name } do
-          = material_icon 'delete'
-          = space
-          span 削除
+        - unless local_assigns[:hide_buttons]
+          = link_to edit_bot_question_answer_path(bot, question_answer), class: 'btn btn-default btn-xs', data: { event_name: 'Open edit question answer', bot_id: bot.id, bot_name: bot.name } do
+            = material_icon 'edit'
+            = space
+            span 編集
+          = space 3
+          = link_to bot_question_answer_path(bot, question_answer), class: 'btn btn-danger btn-xs', data: { confirm: '本当に削除してよろしいですか？', method: :delete, event_name: 'Delete question answer', bot_id: bot.id, bot_name: bot.name } do
+            = material_icon 'delete'
+            = space
+            span 削除
