--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,6 +49,7 @@ body {
   &--headless {
     padding-top: 16px !important;
     padding-left: 16px !important;
+    padding-right: 16px !important;
   }
 }
 
