--- a/app/views/question_answers/_search_form.html.slim
+++ b/app/views/question_answers/_search_form.html.slim
@@ -1,7 +1,7 @@
 .well.clearfix
   .pull-left
     = form_tag action_url, method: :get, class: 'form-inline', data: { event_name: 'Search question answer', bot_id: bot.id, bot_name: bot.name } do
-      = collection_select :topic, :id, bot.topic_tags, :id, :name, { prompt: "トピックタグで絞込", selected: @topic_id.to_i }, class: 'form-control'
+      = collection_select :topic, :id, topic_tags_for_select(@bot), :id, :name, { prompt: "-- トピックタグで絞込 --", selected: (@topic_id.to_i if @topic_id.present?) }, class: 'form-control'
       = text_field_tag :keyword, params[:keyword], class: "search-question-answer form-control", placeholder: "検索ワードを入力"
       = space
       = submit_tag '検索', name: "search", class: "btn btn-default"
