お問い合わせ文言をサポートに変更

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -292,5 +292,9 @@ body {
 }
 
 .search-question-answer {
-  margin-left: 5px;
+  margin-bottom: 0px;
+}
+
+.info-support-form p {
+  margin-bottom: 0px
 }
