チャットテストの文言修正

--- a/app/views/chat_tests/create.html.slim
+++ b/app/views/chat_tests/create.html.slim
@@ -1,6 +1,6 @@
-h1 チャットテスト結果
+h1 テスト結果
 .pull-right
-  = link_to 'インポート画面に戻る', new_bot_chat_test_path(@bot), class: 'btn btn-default'
+  = link_to 'アップロード画面に戻る', new_bot_chat_test_path(@bot), class: 'btn btn-default'
 
 table.table.table-striped
   thead
@@ -10,7 +10,7 @@ table.table.table-striped
 
   tbody
     - @chat.messages.each_with_index do |message, i|
-      - next if i % 2 == 1
+      - next if i.odd?
       tr
         td = message.body
         td = @chat.messages[i + 1].body
