--- a/app/views/chat_tests/new.html.slim
+++ b/app/views/chat_tests/new.html.slim
@@ -1,16 +1,16 @@
 = bootstrap_form_tag url: bot_chat_tests_path(@bot), method: :post do |f|
   .panel.panel-default
     .panel-heading 
-      h4 チャットテスト
+      h4 ボットテスト
 
     .panel-body
       p
         |
-          チャットテスト機能は、csv形式の質問を一括投入することで、<br />
+          ボットテスト機能は、csv形式の質問を一括投入することで、<br />
           対応した回答が得られるかを、ブラウザ上で確認することができます。<br />
 
       = f.file_field :file, label: "ファイル"
-      = f.submit 'インポート', class: 'btn btn-success'
+      = f.submit 'アップロード', class: 'btn btn-success'
 
       br
       br
@@ -23,6 +23,6 @@
           p
             | Excel等の表計算ソフトにてデータを作成する場合、<br />
               下図のように、A列に質問を入力してファイルを作成してください。<br />
-              ファイル作成後、CSV形式でインポートして下さい。
+              ファイル作成後、CSV形式でアップロードして下さい。
 
           = image_tag 'import_file.png'
