--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,9 +28,13 @@ body
     - if !content_for?(:hide_global_header)
       = render 'layouts/shared/ui/header'
 
-    - unless content_for?(:hide_sidebar)
-      = render 'layouts/shared/ui/side_nav'
 
-    .container.container-main class=content_for(:additional_container_main_class)
-      = render "shared/flash"
+    - if content_for?(:hide_sidebar)
+      .header-space
+      .kontainer= render "shared/flash"
       = yield
+    - else
+      = render 'layouts/shared/ui/side_nav'
+      .container.container-main class=content_for(:additional_container_main_class)
+        = render "shared/flash"
+        = yield
