--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -26,7 +26,7 @@ ul.nav.nav-tabs
             .col-sm-6.col-sm-push-6
               .chat-message--my.full-width
                 .chat-message__icon style=("background-image:url(#{image_path('silhouette.png')});")
-                .chat-message__balloon.light-bg= task.guest_message
+                .chat-message__balloon= task.guest_message
             .col-sm-6.col-sm-pull-6
               .chat-message.full-width
                 .chat-message__icon style=("background-image:url(#{@bot.image_url});")
