--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -2,6 +2,7 @@ span(
   data-component="ChatApp"
   data-token=@bot.token
   data-use-similarity-classification=@bot.learning_parameter_attributes[:use_similarity_classification].to_json
+  data-show-path=chats_path(@bot.token)
   data-is-manager=(current_user.present? && (current_user.normal? || current_user.staff?)).to_json
   data-flash-message=flash[:warning]
 )
