--- a/app/assets/stylesheets/modules/chat/message.scss
+++ b/app/assets/stylesheets/modules/chat/message.scss
@@ -65,6 +65,7 @@
     }
 
     .chat-message__textarea {
+      position: relative;
       margin-left: 0;
       margin-right: $-icon-size + $-balloon-spacing;
 
@@ -180,6 +181,19 @@
     textarea {
       resize: none;
     }
+  }
+
+  &__suggestions {
+    overflow-y: auto;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 250;
+    height: 100px;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
   }
 
   &__part-label {
