--- a/app/views/layouts/shared/ui/_side_nav.html.slim
+++ b/app/views/layouts/shared/ui/_side_nav.html.slim
@@ -18,7 +18,7 @@
       = link_to bot_tasks_path(@bot), class: 'list-group-item', data: { event_name: 'Open tasks', bot_id: @bot.id, bot_name: @bot.name } do
         = Task.model_name.human
         = space
-        span.badge= unstarted_tasks_count
+        span.badge class=('badge-warning' unless unstarted_tasks_count.zero?) = unstarted_tasks_count
       = link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item', data: { event_name: 'Open exporing', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item', data: { event_name: 'Open importing', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "Q&A管理", bot_question_answers_path(@bot), class: 'list-group-item', data: { event_name: 'Open qestion answers', bot_id: @bot.id, bot_name: @bot.name }
