--- a/app/views/admin/bots/accuracy_test_cases/index.html.slim
+++ b/app/views/admin/bots/accuracy_test_cases/index.html.slim
@@ -4,7 +4,7 @@
   .page-header
     .page-header__title 精度テスト
     .page-header__controls
-      = link_to 'テスト実行', executions_admin_bot_accuracy_test_cases_path(@bot), method: :post, class: 'btn btn-primary btn-sm'
+      = link_to 'テスト実行', admin_bot_accuracy_test_cases_execution_path(@bot), class: 'btn btn-primary btn-sm', data: { method: :post }
 
   table.table.table-striped
     thead
@@ -42,27 +42,39 @@
                 = space
                 span 削除
           td
-            p
-              - 5.times do
-                |これは回答文です
-              h5 サジェスト
-              ul
-                - 3.times do
-                  li なにかの質問なにかの質問なにかの質問なにかの質問
+            - if @results.present?
+              - @results[accuracy_test_case.id].tap do |bot_messages|
+                - bot_messages.each do |bot_message|
+                  dl style="margin-bottom:16px"
+                    dt 回答
+                    dd
+                      - if bot_message.answer_failed
+                        i.fa.fa-exclamation-triangle.text-warning
+                        = space
+                      = nl2br bot_message.body
+
+                  - if bot_message.similar_question_answers.present?
+                    strong サジェスト
+                    ul
+                      - bot_message.similar_question_answers.each do |qa|
+                        li= qa.question
 
           td.text-center
-            - if accuracy_test_case.id.odd?
-              = material_icon 'check_circle', class: 'text-success'
-            - else
-              = material_icon 'close', class: 'text-danger'
+            - if @results.present?
+              - if accuracy_test_case.success_result?(@results[accuracy_test_case.id])
+                = material_icon 'check_circle', class: 'text-success'
+              - else
+                = material_icon 'close', class: 'text-danger'
 
-    tfoot
-      tr
-        td colspan=4
-        td: h4.text-center
-          span 2 成功 / 5 total,
-          = space 3
-          span 成功率 50%
+    - if @results.present?
+      tfoot
+        tr
+          td colspan=4
+          td colspan=2
+            h4.text-center
+              span #{@success_count} 成功 / #{@accuracy_test_cases.count} total,
+              = space 3
+              span 成功率 #{(@success_count.to_f / @accuracy_test_cases.count.to_f * 100).to_i}%
 
   = form_for [:admin, @bot, @bot.accuracy_test_cases.build] do |f|
     table.table: tbody: tr
@@ -72,6 +84,7 @@
         = f.text_area :expected_text, class: 'form-control', placeholder: '期待値'
         .help-block: label
           = f.check_box :is_expected_suggestion
+          = space
           span サジェストを期待
       td
         = f.submit class: 'btn btn-success'
