Fix tasks#index style

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -33,7 +33,7 @@ ul.nav.nav-tabs
               .chat-message--my.full-width
                 .chat-message__icon style=("background-image:url(#{image_path('silhouette.png')});")
                 .chat-message__balloon= task.guest_message
-            .col-sm-6.col-sm-pull-6
+            .col-sm-6.col-sm-pull-6 style="padding-top:16px"
               .chat-message.full-width
                 .chat-message__icon style=("background-image:url(#{@bot.image_url});")
                 .chat-message__balloon
