--- a/app/views/chat_tests/new.html.slim
+++ b/app/views/chat_tests/new.html.slim
@@ -1,28 +1,25 @@
 = bootstrap_form_tag url: bot_chat_tests_path(@bot), method: :post do |f|
   .panel.panel-default
-    .panel-heading 
+    .panel-heading
       h4 ボットテスト
 
     .panel-body
       p
         |
           ボットテスト機能は、csv形式の質問を一括投入することで、<br />
-          対応した回答が得られるかを、ブラウザ上で確認することができます。<br />
+          対応した回答が得られるかをテストし、結果のcsvファイルをダウンロードできます。<br />
 
-      = f.file_field :file, label: "ファイル"
+      = f.file_field :file, label: "CSVファイル"
       = f.submit 'アップロード', class: 'btn btn-success'
 
       br
       br
 
-      .panel.panel-default
-        .panel-heading
-          h5 テストデータ作成の注意点
-          
-        .panel-body
-          p
-            | Excel等の表計算ソフトにてデータを作成する場合、<br />
-              下図のように、A列に質問を入力してファイルを作成してください。<br />
-              ファイル作成後、CSV形式でアップロードして下さい。
+      .panel.panel-default: .panel-body.text-muted
+        p: strong テストデータ作成の注意点
+        p
+          | Excel等の表計算ソフトにてデータを作成する場合、<br />
+            下図のように、A列に質問を入力してファイルを作成してください。<br />
+            ファイル作成後、CSV形式でアップロードして下さい。
 
-          = image_tag 'import_file.png'
+        = image_tag 'import_file.png', width: 400, style: 'border: 1px solid #999;'
