--- a/app/views/pages/styleguide.html.slim
+++ b/app/views/pages/styleguide.html.slim
@@ -103,6 +103,13 @@ html
               = material_icon 'book', class: 'text-gray-light mi-sm'
               = space
               span 辞書
+          li class="nav-item"
+            a class="nav-link" href="#"
+              = material_icon 'done_all', class: 'text-gray-light mi-sm'
+              = space
+              span ボットテスト
+              = space
+              span.badge.badge-pill.badge-warning 11
 
     .pt-4
       .container
