--- a/app/views/chat_tests/new.html.slim
+++ b/app/views/chat_tests/new.html.slim
@@ -11,10 +11,10 @@
 
       = f.file_field :file, label: "CSVファイル"
 
-      = f.submit 'Shift_JISでインポート', class: 'btn btn-success'
-      = f.submit 'UTF-8でインポート', class: 'btn btn-success'
+      = f.submit 'Shift_JISでアップロード', class: 'btn btn-success'
+      = f.submit 'UTF-8でアップロード', class: 'btn btn-success'
       .p.help-block
-        |※ファイルはCSV形式でインポートして下さい
+        |※ファイルはCSV形式でアップロードして下さい
         br
         |※Excelで作成したCSVのエンコードはShift_JISです
 
