説明文を更新

--- a/app/views/imports/_form.html.slim
+++ b/app/views/imports/_form.html.slim
@@ -2,8 +2,9 @@
   p
     |
       このインポート機能は、対話データを一括で追加登録する機能です。<br />
-      以前に登録してあるデータと完全一致する質問は更新されます。<br />
-      完全一致しない場合でも以前のデータが削除されることはありません。
+      以前に登録してあるデータとidが一致する質問は更新されます。<br />
+      idが空の場合新しい質問が追加されます。<br />
+      idが一致しない場合でも以前のデータが削除されることはありません。
 
   = f.file_field :file, label: 'ファイル'
 
