--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,6 @@ html
     link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
     link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"
     = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
     = csrf_meta_tags
 
     - if Rails.env.production?
@@ -17,6 +16,7 @@ html
       = render 'layouts/shared/js_vars/current_user'
     = render 'layouts/shared/js_vars/images'
     = render 'layouts/shared/js_vars/current_bot'
+    = render 'layouts/shared/js_vars/rollbar'
 
   body
     - if Rails.env.production?
@@ -39,3 +39,5 @@ html
         .container.container-main class=content_for(:additional_container_main_class)
           = render "shared/flash"
           = yield
+
+  = javascript_include_tag 'application'
