--- a/app/views/layouts/shared/js_vars/_rollbar.html.slim
+++ b/app/views/layouts/shared/js_vars/_rollbar.html.slim
@@ -1,2 +1,2 @@
 javascript:
-  window.rollbarTokenClient = "#{ENV['ROLLBAR_TOKEN_CLIENT']}";
+  window.rollbarTokenClient = #{ENV['ROLLBAR_TOKEN_CLIENT'].to_json.html_safe};
