--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -227,6 +227,7 @@ body {
     padding: 0;
     overflow-y: auto;
     background: #F4F4F4;
+    width: 200px;
 
     .bot-profile {
       padding: 20px 0;
