--- a/app/views/question_answers/_form.html.slim
+++ b/app/views/question_answers/_form.html.slim
@@ -1,3 +1,7 @@
+= link_to '戻る', session[:url], class: 'btn btn-default'
+br
+br
+
 .panel.panel-default
   .panel-heading: .panel-title
     = @question_answer.persisted? ? 'Q&A編集' : 'Q&A新規登録'
