--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,13 @@
 doctype html
 html
   head
-    meta name="charset" content="utf-8"
-    meta name="viewport" content="width=device-width, initial-scale=1.0"
+    meta charset="utf-8"
     title My-ope office - 社内問い合わせ専用AIチャットボット
 
     link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
     link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"
-    = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
+    = stylesheet_link_tag    'app', media: 'all'
+    = javascript_include_tag 'app'
     = csrf_meta_tags
 
     - if Rails.env.production?
