--- a/app/views/layouts/shared/ui/_header.html.slim
+++ b/app/views/layouts/shared/ui/_header.html.slim
@@ -1,58 +1,35 @@
 header
-  nav.navbar.navbar-default.navbar-fixed-top
-    .container
-      .navbar-header
-        button.navbar-toggle.collapsed[type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"]
-          span.sr-only
-            | Toggle navigation
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
-        = link_to 'My-ope office', root_path, class: "navbar-brand"
-      #navbar.navbar-collapse.collapse
-        ul.nav.navbar-nav
-          / li.active
-          /   a[href="#"]
-          /     | Home
-          / li
-          /   a[href="#about"]
-          /     | About
-          / li
-          /   a[href="#contact"]
-          /     | Contact
-        - if user_signed_in?
-          ul.nav.navbar-nav.navbar-right
-            li.dropdown
-              a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"]
-                | staffメニュー
-                span.caret
-              ul.dropdown-menu
-                - if current_user.staff?
-                  li
-                    = link_to "システム共通同義語一覧", admin_word_mappings_path, data: { event_name: 'Open admin word mapping index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) }
-                  - if @bot.present?
-                    li
-                      = link_to "精度テスト", admin_bot_accuracy_test_cases_path(@bot), data: { event_name: 'Open admin accuracy test case index', bot_id: @bot.id, bot_name: @bot.name }
-            li
-              = link_to "ヘルプ", " https://mofmof.zendesk.com", target: "blank"
-            li
-              = link_to "お問い合わせ", new_contacts_path
-            - if policy(:bot).index?
-              li
-                = link_to "Bot一覧", bots_path, data: { event_name: 'Open bot index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) }
-            - if policy(current_user).edit?
-              li
-                = link_to 'パスワード変更', edit_user_registration_path, data: { event_name: 'Open edit password', bot_id: @bot.try(:id), bot_name: @bot.try(:name) }
-            / li
-            /   = link_to "管理者画面", rails_admin_path
-            / li.dropdown
-            /   a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"]
-            /     | マスタ 
-            /     span.caret
-            /   ul.dropdown-menu
-            /     li
-            /       = link_to '回答', rails_admin.index_path(model_name: :answer)
-            /     li
-            /       = link_to '文脈', rails_admin.index_path(model_name: :context)
-            li
-              = link_to "ログアウト", destroy_user_session_path, data: { method: :delete, event_name: 'Logout', bot_id: @bot.try(:id), bot_name: @bot.try(:name) }
+  nav.navbar.navbar-light.navbar-global
+    .container.d-flex.justify-content-between
+      h1.navbar__logo.mr-auto= link_to 'My-ope office', root_path
+      - if user_signed_in?
+        ul.navbar-nav.d-flex.flex-row
+          li.nav-item
+            = link_to 'ヘルプ', 'https://mofmof.zendesk.com/', class: 'nav-link', target: '_blank', data: { event_name: 'Open help center' }
+          li.nav-item
+            = link_to 'サポート', new_contacts_path, class: 'nav-link', data: { event_name: 'Open contact form' }
+          /li.nav-item
+            = link_to new_contacts_path, class: 'nav-link' do
+              span アップデート情報
+              = space
+              span.badge.badge-pill.badge-danger 1
+          li.nav-item.dropdown
+            = link_to current_user.email.split('@').first, '#', class: 'nav-link dropdown-toggle', id: 'navbarDropdownMenuLink', data: { toggle: "dropdown", event_name: 'Toggle account dropdown menu' }
+            .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdownMenuLink"
+              = link_to 'ボット一覧', bots_path, class: 'dropdown-item', data: { event_name: 'Open bot index' }
+              = link_to 'ユーザー情報変更', edit_user_registration_path, class: 'dropdown-item', data: { event_name: 'Open edit password' }
+
+              .dropdown-divider
+
+              = link_to 'ログアウト', destroy_user_session_path, class: 'dropdown-item', data: { method: :delete, event_name: 'Logout' }
+
+              .dropdown-divider
+
+              - if current_user&.staff?
+                h6.dropdown-header Staffメニュー
+                = link_to 'システム同義語', admin_word_mappings_path, class: 'dropdown-item'
+                - if @bot.present?
+                  = link_to '精度テスト', admin_bot_accuracy_test_cases_path(@bot), class: 'dropdown-item'
+
+      - else
+        = link_to 'ログイン', new_user_session_path, class: 'btn btn-sm btn-primary'
