Apply new design to bots#index

--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -1,6 +1,6 @@
 .row: .col-8.offset-2
   .mt-5.mb-4
-    h4.mt-5 サポートフォーム
+    h4 サポートフォーム
     p
       |My-ope officeご利用にあたってお気づきの点や不具合、
       br
