--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -16,7 +16,7 @@
           = space
           span 学習を実行
         = space 2
-        = link_to edit_bot_path(@bot), class: 'btn btn-outline-gray btn-sm' do
+        = active_link_to edit_bot_path(@bot), class: 'btn btn-outline-gray btn-sm', active: :exact do
           = material_icon 'settings', class: 'mi-xs'
           = space
           span 設定
@@ -25,43 +25,43 @@
     .container
       ul.d-flex.justify-content-start
         li.nav-item
-          a class="nav-link active" href="#"
+          = active_link_to bot_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'dashboard', class: 'text-gray-light mi-sm'
             = space
             span ダッシュボード
         li class="nav-item"
-          a class="nav-link" href="#"
+          = active_link_to bot_threads_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'history', class: 'text-gray-light mi-sm'
             = space
             span 対話履歴
         li class="nav-item"
-          a class="nav-link" href="#"
+          = active_link_to bot_tasks_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'playlist_add_check', class: 'text-gray-light mi-sm'
             = space
             span 対話タスク
             = space
             span.badge.badge-pill.badge-warning 11
         li class="nav-item"
-          a class="nav-link" href="#"
+          = active_link_to bot_imports_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'view_list', class: 'text-gray-light mi-sm'
             = space
             span 学習データ
         li class="nav-item"
-          a class="nav-link" href="#"
+          = active_link_to bot_question_answers_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'question_answer', class: 'text-gray-light mi-sm'
             = space
             span Q&A
         li class="nav-item"
-          a class="nav-link" href="#"
+          = active_link_to bot_conversation_tree_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'clear_all', class: 'text-gray-light mi-sm flip-horizontal'
             = space
             span 会話ツリー
         li class="nav-item"
-          a class="nav-link" href="#"
+          = active_link_to bot_word_mappings_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'book', class: 'text-gray-light mi-sm'
             = space
             span 辞書
-        li class="nav-item dropdown"
+        /li class="nav-item dropdown"
           a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button"
             span その他
           .dropdown-menu.dropdown-menu-right
@@ -74,4 +74,13 @@
 
 .pt-4
   .container
+    - if notice || alert
+      - if notice
+        .alert.alert-success
+          button.close data-dismiss="alert" &times;
+          = notice
+      - if alert
+        .alert.alert-danger
+          button.close data-dismiss="alert" &times;
+          = alert
     = yield
