--- a/app/views/bots/edit.html.slim
+++ b/app/views/bots/edit.html.slim
@@ -1,19 +1,58 @@
+= render layout: 'bots/layout' do
+  .row: .col-8.offset-2
 
-.panel.panel-default
-  .panel-heading
-    h4 Bot管理
-  .panel-body
-    = render 'form'
+    = nested_form_for(@bot, data: { event_name: "Update bot", bot_id: @bot.id, bot_name: @bot.name }) do |f|
+      = render "shared/errors", object: @bot
 
-.panel.panel-default
-  .panel-heading: h4
-    |チャットウィジェット
-    - if Time.current <= Time.zone.parse('2017-06-14 23:59:59')
-      = space
-      span.label.label-warning NEW
-  .panel-body
-    p 以下のコードをWebサイトに貼り付けると、画面の右下に開閉できる小さなウィンドウでチャットをご利用いただけます。
-    p= render 'chat_widgets/embed_code'
-    = link_to '#', class: 'btn btn-default', data: { role: 'copy-button', target: '#chat-widget-embed-code' } do
-      i.material-icons content_copy
-      span クリップボードにコピー
+      .form-group
+        - if @bot.image?
+          .text-center
+            = image_tag @bot.image_url(:thumb), class: 'img-circle img-thumbnail'
+            br
+            = f.label :remove_image do
+              = f.check_box :remove_image
+              = space
+              span 画像を削除
+        = f.label :image
+        = f.file_field :image, class: 'form-control'
+
+      .form-group
+        = f.label :name
+        = f.text_field :name, class: 'form-control'
+
+
+      .form-group
+        = f.label :classify_failed_message
+        = f.text_area :classify_failed_message, rows: 3, class: 'form-control'
+
+      .form-group
+        = f.label :start_message
+        = f.text_area :start_message, rows: 3, class: 'form-control'
+
+      .form-group.form-inline
+        .card: .card-block
+          h5.mb-3: strong チャット埋め込みの許可ホスト
+          #bot-allowed-hosts
+            = f.fields_for :allowed_hosts do |nf|
+              = nf.select :scheme, AllowedHost.schemes.keys, {}, class: 'form-control form-control-sm'
+              = space
+              = nf.text_field :domain, class: 'form-control form-control-sm', hide_label: true, placeholder: '*.example.com'
+              = space
+              = nf.link_to_remove '削除', class: 'btn btn-danger btn-sm', data: { confirm: '本当に削除してよろしいですか？' }
+              hr
+          = f.link_to_add '許可ホストを追加', :allowed_hosts, class: 'btn btn-secondary btn-sm mb-3', data: { target: '#bot-allowed-hosts' }
+          .form-text.text-muted
+            |※１つも登録がない場合すべてのホストに対して埋め込みが許可されます<br />
+            |※追加と削除を行ったら必ず更新するボタンを押してください<br />
+            |※サブドメインは <code>*</code> で全てにマッチできます（例：*.example.com）サブドメイン無しは個別に登録する必要があります
+
+      .form-group.text-right
+        = f.submit class: 'btn btn-success'
+
+      .form-group.mt-5
+        .card: .card-block
+          h5.mb-3: strong Danger zone
+          span(
+            data-component="BotResetButton"
+            data-url=reset_bot_path(@bot)
+          )
