--- a/app/views/bots/show.html.slim
+++ b/app/views/bots/show.html.slim
@@ -1,6 +1,6 @@
 = render layout: 'bots/layout' do
 
-  .card
+  .card.mb-4
     .card-header アップデート情報
     .card-block
       h5: strong
@@ -12,8 +12,25 @@
         |初期質問リストとは：チャットを開始すぐの画面に、任意の質問候補を最大で５つまで表示できる機能です。
         br
         |時期によって質問内容が予想される場合等に設定しておくと効果的です。
-      p= image_tag 'initial-questions-sample.png', style: "border:2px solid #ccc; width: 400px; height:auto; display:block; margin:0 auto;"
       = link_to new_chats_path(@bot.token), class: 'btn btn-link', target: '_blank' do
         span チャット画面で設定する
         = space
         i.material-icons keyboard_arrow_right
+
+  .card.mb-4
+    .card-header チャットウィジェット
+    .card-block
+      p 以下のコードをWebサイトに貼り付けると、画面の右下に開閉できる小さなウィンドウでチャットをご利用いただけます。
+      p= render 'chat_widgets/embed_code'
+      = link_to '#', class: 'btn btn-default', data: { role: 'copy-button', target: '#chat-widget-embed-code' } do
+        i.material-icons content_copy
+        span クリップボードにコピー
+
+  .card.mb-4
+    .card-header チャット埋め込み
+    .card-block
+      |高さ:
+      = text_field_tag :width, 500, class: 'form-control'
+      |幅:
+      = text_field_tag :height, 500, class: 'form-control'
+    = text_field_tag :embed, bot_embed_code(@bot), class: 'form-control', readonly: true
