--- a/app/views/layouts/shared/ui/_side_nav.html.slim
+++ b/app/views/layouts/shared/ui/_side_nav.html.slim
@@ -15,6 +15,10 @@
       = link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank', data: { event_name: 'Open new chat', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "対話履歴", bot_threads_path(@bot), class: 'list-group-item', data: { event_name: 'Open threads', bot_id: @bot.id, bot_name: @bot.name }
       /= link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item', data: { event_name: 'Open training', bot_id: @bot.id, bot_name: @bot.name }
+      = link_to bot_tasks_path(@bot), class: 'list-group-item', data: { event_name: 'Open tasks', bot_id: @bot.id, bot_name: @bot.name } do
+        = Task.model_name.human
+        = space
+        span.badge class=('badge-warning' unless unstarted_tasks_count.zero?) = unstarted_tasks_count
       = link_to "ボットテスト", new_bot_chat_test_path(@bot), class: 'list-group-item', data: {event_name: 'Open chat test', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item', data: { event_name: 'Open exporing', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item', data: { event_name: 'Open importing', bot_id: @bot.id, bot_name: @bot.name }
